--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
-    "jquery": "1.9.1 - 3",
-    "popper.js": "^1.14.7",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
